Fix positioning and z-index issues

--- a/src/components/styles/lightcurve.css
+++ b/src/components/styles/lightcurve.css
@@ -3,7 +3,7 @@
   background-color: white;
   opacity: 0.8;
   border: 2px solid #c0c1c1;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
